# stock-holdings-ocr

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
data/: categories.yaml
data/aliases/: issuer_aliases.yaml  korean_names.yaml
docs/: architecture.md  extraction-prompt.md  workflow.md
src/holdings_ocr/: __init__.py  categorizer.py  category_rules.py  cli.py  drawdown.py  drawdown_service.py  extractor.py  holdings_cache.py  holdings_service.py  holdings_storage.py  market_sentiment.py  metrics.py  normalizer.py  reporter.py  schemas.py  vix_strategy.py  youtube.py  youtube_service.py
tests/: test_categorizer.py  test_category_rules.py  test_drawdown.py  test_extractor.py  test_holdings_cache.py  test_holdings_service.py  test_holdings_storage.py  test_metrics.py  test_normalizer.py  test_reporter.py  test_schemas.py  test_views_fear_greed.py  test_views_holdings.py  test_views_vix.py  test_youtube.py
tests/fixtures/: README.md
views/: drawdown.py  fear_greed.py  holdings.py  vix.py  youtube.py
