[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holdings-ocr"
version = "0.1.0"
description = "Extract stock holdings from broker screenshots and produce aggregated reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
ui = [
    "streamlit>=1.30",
]

[project.scripts]
holdings-ocr = "holdings_ocr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/holdings_ocr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
